// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`printTable > writes a table to stdout 1`] = `
"Table Title
Column 1         Column 2        
Row 1, Column 1  Row 1, Column 2 
Row 2, Column 1  Row 2, Column 2 
Table Footer
"
`;

exports[`printTable > writes a table with none borders to stdout 1`] = `
"Table Title
Column 1         Column 2        
Row 1, Column 1  Row 1, Column 2 
Row 2, Column 1  Row 2, Column 2 
Table Footer
"
`;

exports[`printTable > writes a table with thick borders to stdout 1`] = `
"Table Title
╔═════════════════╤═════════════════╗
║ Column 1        │ Column 2        ║
╟─────────────────┼─────────────────╢
║ Row 1, Column 1 │ Row 1, Column 2 ║
╟─────────────────┼─────────────────╢
║ Row 2, Column 1 │ Row 2, Column 2 ║
╚═════════════════╧═════════════════╝
Table Footer
"
`;

exports[`printTable > writes a table with thin borders to stdout 1`] = `
"Table Title
┌─────────────────┬─────────────────┐
│ Column 1        │ Column 2        │
├─────────────────┼─────────────────┤
│ Row 1, Column 1 │ Row 1, Column 2 │
├─────────────────┼─────────────────┤
│ Row 2, Column 1 │ Row 2, Column 2 │
└─────────────────┴─────────────────┘
Table Footer
"
`;

exports[`printTable > writes a table with without a footer to stdout 1`] = `
"Table Title
Column 1         Column 2        
Row 1, Column 1  Row 1, Column 2 
Row 2, Column 1  Row 2, Column 2 
"
`;
